Fixing overflow issue on mobile

--- a/assets/source/scss/00-base/_reset.scss
+++ b/assets/source/scss/00-base/_reset.scss
@@ -9,3 +9,7 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  overflow: hidden;
+}
